applications/trending-trawler/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  labels:
    app: website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: trending-trawler-website
          image: leo310/trending-trawler-website
          ports:
            - containerPort: 80
