applications/trending-trawler/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
spec:
  selector:
    app: website
  ports:
    - name: website
      protocol: TCP
      port: 80
      targetPort: 8000
